--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,39 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"chatapp-b6e6f","appId":"1:332187799493:android:f0e8238d1c63481bfd05ac","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"chatapp-b6e6f","configurations":{"android":"1:332187799493:android:f0e8238d1c63481bfd05ac","ios":"1:332187799493:ios:a25534a16be234e5fd05ac","web":"1:332187799493:web:ced3625a760a6e91fd05ac"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "chatapp-b6e6f",
+          "appId": "1:332187799493:android:f0e8238d1c63481bfd05ac",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "chatapp-b6e6f",
+          "configurations": {
+            "android": "1:332187799493:android:f0e8238d1c63481bfd05ac",
+            "web": "1:332187799493:web:ced3625a760a6e91fd05ac"
+          }
+        }
+      }
+    }
+  },
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
