--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      # - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
       #   with:
       #     distribution: "zulu"
       #     java-version: "12"
@@ -23,9 +23,16 @@ jobs:
         with:
           channel: "stable"
           architecture: x64
+
+      - name: clean dependencies
+        run: flutter clean
+
+      - name: Install dependencies
+        run: flutter pub get
       #// apk
       #    - run: flutter build apk --release --split-per-abi
       # //web
+        - name: Build web
       - run: flutter build web --web-renderer html --release
       #// ios
       # - run: |
