--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           # artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
-          artifacts: "build/web/*"
+          artifacts: "build/web*"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
