--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: webapp
-description: "A new Flutter project."
+name: Portfolio
+description: ""
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -33,14 +33,13 @@ dependencies:
   cloud_firestore: ^5.0.1
   connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
-  device_frame: ^1.1.0
+  device_frame: ^1.2.0
   dotlottie_loader: ^0.0.4
   firebase_core: ^3.1.0
   firebase_storage: ^12.1.1
   flutter:
     sdk: flutter
   flutter_cors: ^1.5.0
-  flutter_native_splash: ^2.4.0
   get: ^4.6.6
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
@@ -56,7 +55,7 @@ dependencies:
   url_launcher: ^6.3.0
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
