--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       #// apk
       #  - run: flutter build apk --release --split-per-abi
       # //web
-      - run: flutter build web
+      - run: build web --web-renderer html --release
 
       #// ios
       # - run: |
@@ -43,6 +43,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           # artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
-          artifacts: "build/web/"
+          artifacts: "build/web/*"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
