--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,32 @@ dependencies:
   mailto: ^2.0.0
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
+  # collection: ^1.19.0
+  # http_parser: ^4.1.0
+  # leak_tracker: ^10.0.5
+  # leak_tracker_flutter_testing: ^3.0.5
+  # material_color_utilities: ^0.12.0
+  # meta: ^1.15.0
+  # rxdart: ^0.28.0
+  # string_scanner: ^1.3.0
+  # test_api: ^0.7.3
+  # vm_service: ^14.2.4
+  # web: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  # collection: ^1.19.0
+  # http_parser: ^4.1.0
+  # leak_tracker: ^10.0.5
+  # leak_tracker_flutter_testing: ^3.0.5
+  # material_color_utilities: ^0.12.0
+  # meta: ^1.15.0
+  # rxdart: ^0.28.0
+  # string_scanner: ^1.3.0
+  # test_api: ^0.7.3
+  # web: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
