--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
   cloud_firestore: ^5.0.1
-  connectivity_plus: ^6.0.3
+  # connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
   device_frame: ^1.2.0
   dotlottie_loader: ^0.0.4
@@ -53,32 +53,35 @@ dependencies:
   mailto: ^2.0.0
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
-  # collection: ^1.19.0
-  # http_parser: ^4.1.0
-  # leak_tracker: ^10.0.5
-  # leak_tracker_flutter_testing: ^3.0.5
-  # material_color_utilities: ^0.12.0
-  # meta: ^1.15.0
-  # rxdart: ^0.28.0
-  # string_scanner: ^1.3.0
-  # test_api: ^0.7.3
-  # vm_service: ^14.2.4
-  # web: ^1.0.0
+  collection: ^1.19.0
+  http_parser: ^4.1.0
+  leak_tracker: ^10.0.5
+  leak_tracker_flutter_testing: ^3.0.5
+  material_color_utilities: ^0.12.0
+  meta: ^1.15.0
+  rxdart: ^0.28.0
+  string_scanner: ^1.3.0
+  test_api: ^0.7.3
+  vm_service: ^14.2.4
+  web: ^1.0.0
+
+dependency_overrides:
+  test_api: 0.7.0
+  collection: ^1.19.0
+  http_parser: ^4.1.0
+  leak_tracker: ^10.0.5
+  leak_tracker_flutter_testing: ^3.0.5
+  material_color_utilities: ^0.12.0
+  meta: ^1.15.0
+  rxdart: ^0.28.0
+  string_scanner: ^1.3.0
+  vm_service: ^14.2.4
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  # collection: ^1.19.0
-  # http_parser: ^4.1.0
-  # leak_tracker: ^10.0.5
-  # leak_tracker_flutter_testing: ^3.0.5
-  # material_color_utilities: ^0.12.0
-  # meta: ^1.15.0
-  # rxdart: ^0.28.0
-  # string_scanner: ^1.3.0
-  # test_api: ^0.7.3
-  # web: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
