--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,91 @@
+# on:
+#   pull_request:
+#     branches:
+#       - main
+#       - master
+#   push:
+#     branches:
+#       - main
+#       - master
+#       - develop
+# name: "Build & Release"
+# jobs:
+#   build:
+#     name: Build & Release
+#     runs-on: windows-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       # - uses: actions/setup-java@v3
+#       #   with:
+#       #     distribution: "zulu"
+
+#       #     java-version: "12"
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           channel: "stable"
+#           architecture: x64
+
+#       #// apk
+#       #  - run: flutter build apk --release --split-per-abi
+#       # //web
+#       - name: Build Flutter web
+#         run: flutter build web --web-renderer html --release
+
+#       #// ios
+#       # - run: |
+#       #     flutter build ios --no-codesign
+#       #     cd build/ios/iphoneos
+#       #     mkdir Payload
+#       #     cd Payload
+#       #     ln -s ../Runner.app
+#       #     cd ..
+#       #     zip -r app.ipa Payload
+#       - name: Push to Releases
+#         uses: ncipollo/release-action@v1
+#         with:
+#           # artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+#           artifacts: "build/web/**"
+#           tag: v1.0.${{ github.run_number }}
+#           token: ${{ secrets.TOKEN }}
+name: "Build & Release"
+
 on:
   pull_request:
     branches:
       - main
-      - master
   push:
     branches:
       - main
-      - master
-      - develop
-name: "Build & Release"
+
 jobs:
   build:
     name: Build & Release
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      # - uses: actions/setup-java@v3
-      #   with:
-      #     distribution: "zulu"
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      #     java-version: "12"
-      - uses: subosito/flutter-action@v2
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           architecture: x64
 
-      #// apk
-      #  - run: flutter build apk --release --split-per-abi
-      # //web
       - name: Build Flutter web
         run: flutter build web --web-renderer html --release
 
-      #// ios
-      # - run: |
-      #     flutter build ios --no-codesign
-      #     cd build/ios/iphoneos
-      #     mkdir Payload
-      #     cd Payload
-      #     ln -s ../Runner.app
-      #     cd ..
-      #     zip -r app.ipa Payload
-      - name: Push to Releases
+      # New Step: Verify index.html
+      - name: Verify index.html
+        run: |
+          if [ ! -f build/web/index.html ]; then
+            echo "index.html not found in build/web"
+            exit 1
+          fi
+
+      - name: Create Release
+        id: create_release
         uses: ncipollo/release-action@v1
         with:
-          # artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
           artifacts: "build/web/**"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
