--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,12 +66,13 @@ dependencies:
   web: ^1.0.0
 
 dependency_overrides:
-  test_api: 0.7.0
+  test_api: ^0.7.3
   collection: ^1.19.0
   http_parser: ^4.1.0
   leak_tracker: ^10.0.5
   leak_tracker_flutter_testing: ^3.0.5
   material_color_utilities: ^0.12.0
+  flutter_cache_manager: ^3.3.3
   meta: ^1.15.0
   rxdart: ^0.28.0
   string_scanner: ^1.3.0
