--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,10 +75,15 @@ jobs:
       - name: Build Flutter web
         run: flutter build web
 
+      - name: Save build to artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-web
+          path: build/web
+
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/web/**"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-#
