--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,35 +47,23 @@
 #           artifacts: "build/web/**"
 #           tag: v1.0.${{ github.run_number }}
 #           token: ${{ secrets.TOKEN }}
-
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
       - main
       - master
       - develop
 
-name: "Build & Release"
+name: "Release"
 
 jobs:
-  build:
-    name: Build & Release
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-          architecture: x64
 
-      - name: Build Flutter web
-        run: flutter build web
-
-      - name: Save build to artifact
+      - name: Upload files to release
         uses: actions/upload-artifact@v2
         with:
           name: build-web
@@ -84,6 +72,6 @@ jobs:
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/web/**"
+          artifacts: "build-web"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
