--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+       classpath 'com.android.tools.build:gradle:7.6.3' // Update to match your Gradle version
+}
