--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,9 @@ jobs:
         with:
           channel: "stable"
           architecture: x64
-
-      - run: flutter build apk --release --split-per-abi
+      - name: Build Flutter web
+        run: flutter build web --web-renderer html --release
+      # - run: flutter build apk --release --split-per-abi
       # - run: |
       #     flutter build ios --no-codesign
       #     cd build/ios/iphoneos
@@ -85,7 +86,8 @@ jobs:
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*"
+          # artifacts: "build/app/outputs/apk/release/*"
+          artifacts: "build/web/**"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 #
